# advent-of-code-rust

./: Cargo.toml
.cargo/: config.toml
